--- a/css/style_tp2.css
+++ b/css/style_tp2.css
@@ -327,6 +327,13 @@ td,th{
 
 /*Estilos form*/
 
+.cont-editar{
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 30%;
+    margin-bottom: 25%;
+}
 
 
 .container-m {
