--- a/css/style_tp2.css
+++ b/css/style_tp2.css
@@ -326,7 +326,7 @@ td,th{
   }
 
 /*Estilos form*/
-
+/*
 .cont-editar{
     width: 90%;
     margin-left: auto;
@@ -334,6 +334,7 @@ td,th{
     margin-top: 20%;
     margin-bottom: 25%;
 }
+*/
 
 
 .container-m {
