--- a/css/style_tp2.css
+++ b/css/style_tp2.css
@@ -436,8 +436,10 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
+    margin-top:20px;
   flex-direction: column;
   box-shadow: 0 -1px 5px 0 rgba(0, 0, 0, 0.3);
+    
 }
 
 .footer-logo {
